chore: add eslint

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,9 +1,3 @@
 # Phormal: the all-inclusive form library
 
-Hello, world!
-
-```
-const hello = 'Hello, world!'
-```
-
-<iframe width="100%" height="300px" src="https://embed.tiptap.dev/preview/Examples/CollaborativeEditing?inline=true&hideSource=false"/>
+This documentation site is yet to be filled up with content.
