--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,12 +1,7 @@
-# Phormal: the all-inclusive form library
+# Phormal: form generation, themes and validation for web artisans
 
-This documentation site is yet to be filled up with content.
+This documentation site is under development.
 
 ## What is Phormal?
 
 Phormal is a library for generating forms, giving them beautiful styles and validating the data in them. We want to help developers stay focused on their business logic while building forms, instead of spending countless hours on perfecting things such as checkbox styles, or on validating zip codes for different countries. The goal is to provide a "works out of the box" experience, for 90% of the use cases, and to allow for customization when needed.
-
-[//]: # (import BasicDemo from "../components/BasicDemo";)
-
-[//]: # ()
-[//]: # (<BasicDemo />)
