refactor: initialize Phormal on calling its constructor, instead of exposing init() as an external API - add production warning to docs

--- a/docs/pages/api-docs/index.mdx
+++ b/docs/pages/api-docs/index.mdx
@@ -1,3 +1,9 @@
+import { Callout } from 'nextra-theme-docs'
+
+<Callout type="info" emoji="ℹ️️">
+  Please note, that this library is still in its alpha-stage. Since its API might still change greatly, we do not recommend using it in production yet.
+</Callout>
+
 ## The Phormal instance
 
 The Phormal instance is the main class of the library. For basic usage, please refer to [Getting started](/guide/getting-started#step-1-javascript).
@@ -95,14 +101,10 @@ The second parameter of the `Phormal` constructor is the form configuration. The
 
 ### Methods
 
-#### `init()`
-
-Initializes the Phormal instance, and mounts the form to the DOM.
-
-#### `values()`
+#### `$values()`
 
 Returns an object with key-value pairs, where each key is the name of the fields you specified, and the values are the values of those fields.
 
-#### `validate()`
+#### `$validate()`
 
 Runs all validators for all fields. Returns `true` if the values of all fields are valid, and `false` otherwise.
