--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,3 +1,9 @@
+import { Callout } from 'nextra-theme-docs'
+
+<Callout type="info" emoji="ℹ️️">
+  Please note, that this library is still in its alpha-stage. Since its API might still change greatly, we do not recommend using it in production yet.
+</Callout>
+
 # Phormal: form generation, themes and validation for web artisans
 
 This documentation site is under development.
