--- a/docs/pages/guide/vue-integration.mdx
+++ b/docs/pages/guide/vue-integration.mdx
@@ -1,127 +1,48 @@
 # Usage with Vue.js
 
+Below are the two ways of integrating Phormal in a Vue application. Fow now, a component is only available for Vue 3. For Vue 2, you save the Phormal instance directly in a [data property](#as-a-data-property).
+
 ## As a component
 
-You can also use this library as a Vue.js component.
+For a code example, please refer to the Vue 3 example in [Getting started](/guide/getting-started#step-1-javascript).
 
-```
-npm install @phormal/component-vue3 @phormal/theme-basic
-```
-
-Please note, that the theme is still installed separately. This allows you to freely pick and choose which theme to use. And then to use the component:
-
-```vue
-<template>
-  <PhormalVue3 ref="phormal" :fields="formFields" :config="formConfig" />
-</template>
-
-<script>
-import {PhormalVue3} from '@phormal/component-vue3';
-
-export default defineComponent({
-  components: {
-    PhormalVue3,
-  },
-
-  data() {
-    return {
-      formFields: {
-        name: {
-          type: 'text',
-          label: 'Name',
-          placeholder: 'Enter your name',
-          value: 'John Doe'
-        },
-      },
-      formConfig: {
-        theme: 'basic',
-      }
-    }
-  },
-
-  methods: {
-    validate() {
-      this.$refs.phormal.$validate();
-    },
-
-    getValues() {
-      return this.$refs.phormal.$values(); // { name: 'John Doe' }
-    }
-  }
-});
-</script>
-
-<style>
-@import '@phormal/theme-basic/dist/index.css';
-</style>
-```
+### Props
 
 |   Prop   | Description                                                                                                                                                        |
 |:--------:|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | `fields` | [See fields argument to Phormal constructor](/api-docs#fields)                                                                                                     |
 | `config` | [config argument to Phormal constructor](/api-docs#config) Please note, that you do not need to specify the `el` config property. The component does this for you. |
 
+### Methods
+
+|    Prop     | Description                                                                                             |
+|:-----------:|:--------------------------------------------------------------------------------------------------------|
+| `$validate` | Runs the validators of all fields. Returns `true` if all fields are valid, otherwise `false`            |
+|  `$values`  | Returns an object with key-value pairs, key being the field name, and the value being its current value |
+
 ## As a data property
 
-Or you can save an instance of Phormal directly in a data property. If you need to set up watchers for a form field value, this is the preferred approach. First install:
+You can also save an instance of Phormal directly in a data property. If you need to set up watchers for a form field value, this is the preferred approach. First install:
 
 ```
 npm install @phormal/core @phormal/theme-basic
 ```
 
 Then:
-```vue
-<template>
-  <div id="phormal"></div>
-</template>
 
-<script>
-import {Phormal} from '@phormal/core';
+import { Tab, Tabs } from 'nextra-theme-docs'
+import Vue3DataProperty from '../../code-examples/vue-data-property/vue3.mdx'
+import Vue2DataProperty from '../../code-examples/vue-data-property/vue2.mdx'
 
-export default defineComponent({
-  data() {
-    return {
-      formFields: {
-        name: {
-          type: 'text',
-          label: 'Name',
-          placeholder: 'Enter your name',
-          value: 'John Doe'
-        },
-      },
-      formConfig: {
-        theme: 'basic',
-        el: '#phormal'
-      },
-      form: null
-    }
-  },
+<Tabs items={['Vue 2', 'Vue 3']}>
+  <Tab>
+    <Vue2DataProperty />
+  </Tab>
+  <Tab>
+    <Vue3DataProperty />
+  </Tab>
+</Tabs>
 
-  mounted() {
-    this.form = new Phormal(this.formFields, this.formConfig);
-  },
+## Further reading
 
-  methods: {
-    validate() {
-      this.form.$validate();
-    },
-
-    getValues() {
-      return this.form.$values(); // { name: 'John Doe' }
-    }
-  },
-
-  watch: {
-    'form.name': {
-      handler: function (val) {
-        console.log('name changed to', val);
-      },
-    }
-  }
-});
-</script>
-
-<style>
-@import '@phormal/theme-basic/dist/index.css';
-</style>
-```
+For more on how to configure the form, and how to use different kinds of inputs, see the [API documentation](/api-docs).
