--- a/docs/pages/guide/getting-started.mdx
+++ b/docs/pages/guide/getting-started.mdx
@@ -1,55 +1,72 @@
-## Tutorial of the basics
+# Tutorial of the basics
 
 For this short tutorial, we will need the core package, as well as some packages for theme and validation:
 
-```
-npm install @phormal/core @phormal/theme-basic @phormal/use-email @phormal/use-required @phormal/use-length
-```
+import { Tab, Tabs } from 'nextra-theme-docs'
 
-We will create a form with three input fields. The **name** field will be a required field, and have a minimum length of 3 characters. The **email** field will also be required, and has to contain a valid email address. Lastly, there will be a checkbox for subscribing to a newsletter.
+<Tabs items={['JS', 'Vue 3']}>
+  <Tab>
+    ```bash copy
+    npm install @phormal/core @phormal/theme-basic @phormal/use-email @phormal/use-required @phormal/use-length
+    ```
+  </Tab>
+  <Tab>
+    ```bash copy
+    npm install @phormal/component-vue3 @phormal/theme-basic @phormal/use-email @phormal/use-required @phormal/use-length
+    ```
+  </Tab>
+</Tabs>
 
-### Step 1: JavaScript
+We will create a form with three input fields. The **name** field will be a required field, and have a minimum length of 3 characters. The **email** field will also be required, and has to contain a valid email address. Lastly, there will be a checkbox for subscribing to a **newsletter**.
 
-```js
-import { Phormal } from '@phormal/core';
-import useEmail from "@phormal/use-email";
-import useRequired from "@phormal/use-required";
-import useLength from "@phormal/use-length";
+## Step 1: JavaScript
 
-const formFields = {
-  name: {
-    label: 'Name',
-    hooks: [useRequired(), useLength(3)]
-  },
-  email: {
-    label: 'Email',
-    hooks: [useRequired(), useEmail()]
-  },
-  newsletter: {
-    type: 'checkbox',
-    label: 'Newsletter',
-    value: true
-  }
-}
+import Vanilla from '../../code-examples/getting-started/vanilla.mdx'
+import Vue3 from '../../code-examples/getting-started/vue3.mdx'
 
-const formConfig = { el: '#phormal', theme: 'basic' }
+<Tabs items={['JS', 'Vue 3']}>
+  <Tab>
+    <Vanilla />
+  </Tab>
+  <Tab>
+    <Vue3 />
+  </Tab>
+</Tabs>
 
-const form = new Phormal(formFields, formConfig)
-```
+## Step 2: HTML
 
-### Step 2: HTML
+<Tabs items={['JS', 'Vue 3']}>
+  <Tab>
+    In the configuration object, we have specified the element where the form should be rendered. Your HTML needs an element with the id `phormal`.
+  </Tab>
+  <Tab>
+    This is taken care of by the component itself. Move on to step 3!
+  </Tab>
+</Tabs>
 
-In the configuration object, we have specified the element where the form should be rendered. Your HTML needs an element with the id `phormal`.
+## Step 3: CSS
 
-### Step 3: CSS
+<Tabs items={['JS', 'Vue 3']}>
+  <Tab>
+    The stylesheet for the basic theme is included in the `@phormal/theme-basic` package. The full path within the node_modules directory would be:
 
-The stylesheet for the basic theme is included in the `@phormal/theme-basic` package. The full path within the node_modules directory would be:
+    ```
+    '@phormal/theme-basic/dist/index.css'
+    ```
 
-```
-'@phormal/theme-basic/dist/index.css'
-```
+    How you import this, will then of course vary, depending on the type of application that you are building.
 
-How you import this, will then of course vary, depending on the type of application that you are building.
+  </Tab>
+  <Tab>
+    If importing the styles directly in a style tag, as in the example above, everythings is now set up. You can however, also import the stylesheet in your head-Tag. The full path within the node_modules directory would be:
+
+    ```
+    '@phormal/theme-basic/dist/index.css'
+    ```
+
+
+  </Tab>
+</Tabs>
 
 ## Result
 
