--- a/docs/pages/guide/index.mdx
+++ b/docs/pages/guide/index.mdx
@@ -8,10 +8,14 @@ import { Callout } from 'nextra-theme-docs'
 
 Phormal is a modular library. It aims to be feature rich, without bloating your bundled code. Therefore, you only need to install as much functionality as needed for your specific use-case. As a minimum, you will need to install the core package of the library:
 
-```
+```bash copy
 npm install @phormal/core
 ```
 
 ## Further packages
 
-The other packages of this library are divided into two categories. Packages which provide styling for the forms are named with a **theme-** prefix. Packages that add logic by hooking into different form fields, called **hooks**, are prefixed with **use-**, inspired by React naming conventions. Installation and usage instructions of these packages can be found under [Hooks](/api-docs/hooks) and [Themes](/api-docs/themes).
+The other packages of this library are divided into three categories.
+
+* [Themes](/api-docs/themes) for adding CSS to your forms.
+* [Hooks](/api-docs/hooks) for adding logic (such as validation) to your form fields.
+* Components: for now the library only offers a dedicated component for Vue 3.
