--- a/docs/pages/guide/examples.mdx
+++ b/docs/pages/guide/examples.mdx
@@ -1,3 +1,9 @@
+# Examples of form fields
+
+import ExamplesThemeSwitch from "../../components/ExamplesThemeSwitch";
+
+<ExamplesThemeSwitch />
+
 ## Inputs of type: number, text, email and password
 
 import {Tabs, Tab} from "nextra-theme-docs";
@@ -47,6 +53,7 @@ import RadioButtonsVanilla from '../../code-examples/examples/radio-buttons.mdx'
 ## Checkboxes
 
 import ExamplesCheckboxes from "../../components/ExamplesCheckboxes";
+import CheckboxesVanilla from '../../code-examples/examples/checkboxes.mdx'
 
 <Tabs items={['Examples', 'Code']}>
   <Tab>
@@ -54,6 +61,6 @@ import ExamplesCheckboxes from "../../components/ExamplesCheckboxes";
   </Tab>
 
   <Tab>
-    <RadioButtonsVanilla />
+    <CheckboxesVanilla />
   </Tab>
 </Tabs>
