docs: add documentation for hooks and themes

--- a/docs/code-examples/examples/radio-buttons.mdx
+++ b/docs/code-examples/examples/radio-buttons.mdx
@@ -14,7 +14,7 @@ const formFields = {
   }
 }
 
-const formConfig = { el: '#phormal-radio-buttons', theme: 'basic' }
+const formConfig = { el: '#phormal-radio-button', theme: /** name of theme */ }
 
 const form = new Phormal(formFields, formConfig)
 ```
