--- a/docs/code-examples/examples/text-inputs.mdx
+++ b/docs/code-examples/examples/text-inputs.mdx
@@ -49,7 +49,7 @@ const formFields = {
   }
 }
 
-const formConfig = { el: '#phormal', theme: 'basic' }
+const formConfig = { el: '#phormal', theme: /** name of theme */ }
 
 const form = new Phormal(formFields, formConfig)
 ```
