--- a/docs/code-examples/examples/checkboxes.mdx
+++ b/docs/code-examples/examples/checkboxes.mdx
@@ -14,7 +14,7 @@ const formFields = {
   }
 }
 
-const formConfig = { el: '#phormal-checkboxes', theme: 'basic' }
+const formConfig = { el: '#phormal-checkboxes', theme: /** name of theme */ }
 
 const form = new Phormal(formFields, formConfig)
 ```
