--- a/docs/code-examples/examples/multi-select.mdx
+++ b/docs/code-examples/examples/multi-select.mdx
@@ -30,7 +30,7 @@ const formFields = {
   }
 }
 
-const formConfig = { el: '#phormal-multiselect', theme: 'basic' }
+const formConfig = { el: '#phormal-select', theme: /** name of theme */ }
 
 const form = new Phormal(formFields, formConfig)
 ```
